Fix warning div always visible in legacy calculators

--- a/www/css/common.css
+++ b/www/css/common.css
@@ -61,6 +61,7 @@
     padding: 2px;
     margin: 4px;
     text-align: center;
+    display: none;
 }
 
 #hint {
